--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -23,7 +23,7 @@ jobs:
             MYSQL_DATABASE: rails_test
     env:
       RAILS_ENV: test
-      DATABASE_URL: "postgres://root:password@localhost:3306/rails_test"
+      DATABASE_URL: mysql2://root:password@localhost:3306/rails_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
